Prevent layout shift in ToC

--- a/src/components/RightSidebar/TableOfContents.css
+++ b/src/components/RightSidebar/TableOfContents.css
@@ -35,6 +35,9 @@
 	cursor: pointer;
 	margin-bottom: 0.5rem;
 	padding-top: 1rem;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
 
 .toc-mobile-header h2 {
